--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -3,6 +3,8 @@ $secondary: #003366;
 $white: #fff;
 $gray: #9b9b9b;
 $danger: #ff0000;
+
+
 .mainSceen {
     display: flex;
     justify-content: center;
@@ -13,20 +15,25 @@ $danger: #ff0000;
     font-family: Arial, sans-serif;
 
     .formContainer {
-        border: 2px solid #fff;
-        border-radius: 18px;
+        border: 2px solid $white;
+        border-radius: 14px;
         padding: 30px;
         height: 60vh;
         width: 500px;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
         .FormTitle {
             font-size: 32px;
             text-align: center;
             font-weight: 600;
             margin-bottom: 20px;
+        }
+        @media only screen and (max-width: 500px) {
+            width: 90vw;
+            height: 100vh;
+            margin: 0 20px;
         }
     }
     .switchLanguage {
@@ -50,17 +57,18 @@ $danger: #ff0000;
             align-items: center;
             flex-direction: column;
             position: relative;
+            cursor: pointer;
             .dot {
                 height: 25px;
                 width: 25px;
                 background-color: #bbb;
-                color: #fff;
+                color: $white;
                 border-radius: 50%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 &.active {
-                    background-color: #003366;
+                    background-color: $secondary;
                 }
             }
             .dot:after {
@@ -72,17 +80,24 @@ $danger: #ff0000;
                 top: 11px;
                 left: 68%;
                 z-index: -1;
+                @media only screen and (max-width: 500px) {
+                    width: 95%;
+                }
             }
             .title {
                 margin-top: 5px;
                 color: gray;
                 width: 100px;
                 text-align: center;
-                font-size: 1.3rem;
+                font-size: 18px;
+                font-weight: 600;
                 width: 100px;
                 &.active {
                     color: $primary;
                 }
+            }
+            &.disabled {
+                cursor: not-allowed;
             }
         }
         .stepContainer:last-child {
